feat: tab in src act same as in the src major mode

--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -57,6 +57,7 @@
 	:diminish org-mode
 	:custom
 	(org-src-fontify-natively t)
+	(org-src-tab-acts-natively t)
 	(org-descriptive-links nil)
 	(org-special-ctrl-a/e t)
 	(org-use-sub-superscripts '{})
